16.08.2011:
        - More drawing fixes, improved accuracy (grids, timescales, edges, markers guaranteed to align now). (Tim p4.0.30)
          Much drawing changed to device (pixel) space instead of virtual space, for accuracy.
        - Fixed display of audio automation graphs. (But not editing). (Tim) 
15.08.2011:
        - Remodel the Meter and the VerticalMeter (Orcan)
13.08.2011:
        - Make the shininess of the Knob ring a little smarter (Orcan)
05.08.2011:
        - Parts having hidden events now drawn using 'jagged' ends and special white edges. (Tim p4.0.29)
        - Improved border drawing guaranteed to show L/R touching part borders. TODO: Top and bottom borders. (Tim)
        - Muted parts now show names and events. Filled with a special brush pattern for easy recognition. (Tim)   
        - Huge changes to PartCanvas::drawItem(). And to all View::XmapXXX methods for better accuracy. (Tim)
        - Changed bool Part::hasHiddenNotes() to int Part::hasHiddenEvents(). Added int Part::cachedHasHiddenEvents(). (Tim)
02.08.2011:
        - Changed behaviour of part clones (flo93)

31.07.2011:
        - Remodel the Knob (Orcan)

28.07.2011:
        - speeded up structural operations (flo93)
        - fixed several heavy bugs in structural operations: (flo93)
           - global insert freezed muse
           - global cut and global insert behaved wrong on parts not
             starting at the zeroth tick
           - fixed upper_bound vs. lower_bound issues
        - clicking below the track list now deselects all tracks (flo93)
        - moved checkRegionNotNull() where it belongs (flo93)
14.07.2011:
        - Fixed loading of old songs with synths. (Tim)
          Added static keyword to array in each synth's oldMidiStateHeader() member. 
27.06.2011:
        - Massively speeded up muse by using operation groups (flo93)
        - Changed behaviour of middle click in all canvases to "delete" (flo93)
21.06.2011: